# aegis

./: .gitignore  CHANGES_本次修复.md  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
aegis-materials/: allowlist-tree.json  investor-credential.json  reserves-commitment.json
circuits/eligibility/: eligibility.circom
circuits/lib/: comparators.circom  eddsaposeidon.circom  poseidon.circom
circuits/proof_of_reserves/: proof_of_reserves.circom
contracts/: Cargo.toml
contracts/eligibility_verifier/: Cargo.toml
contracts/eligibility_verifier/src/: groth16.rs  lib.rs  test.rs
contracts/groth16_bn254_verifier/: Cargo.toml
contracts/groth16_bn254_verifier/src/: lib.rs  test.rs
contracts/por_verifier/: Cargo.toml
contracts/por_verifier/src/: groth16.rs  lib.rs  test.rs
contracts/rwa_gate/: Cargo.toml
contracts/rwa_gate/src/: groth16.rs  lib.rs  test.rs
docs/: ARCHITECTURE.md  GROTH16_VERIFIER.md  SETUP.md  UPGRADE.md
frontend/: README.md  index.html  package.json
prover/: package-lock.json  package.json
prover/src/: build-allowlist.js  field.js  index.js  issue-credential.js  merkle.js  prove-eligibility.js  prove-reserves.js  soroban-format.js
prover/test/: core.test.js
scripts/: build-circuits.sh  deploy.sh  e2e-demo.sh  encode-invoke-args.mjs  export-vk.mjs  invoke-onchain.sh  register-vk.mjs  release-artifacts.sh
