[package]
name = "groth16_bn254_verifier"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# BN254 exposed via env.crypto().bn254() starting in the 26.x line — confirmed
# by actual build/test, not just the changelog. 25.x needs env.crypto_hazmat()
# + the "hazmat-crypto" feature instead (see lib.rs doc comment at the top).
soroban-sdk = "26.0.0"

[dev-dependencies]
soroban-sdk = { version = "26.0.0", features = ["testutils"] }
